Update bottom of the page.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="index_hype_container" style="margin:auto;position:relative;width:375px;height:1750px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?64950"></script>
+	<div id="index_hype_container" style="margin:auto;position:relative;width:375px;height:1545px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?73430"></script>
 	</div>
 
 	<!-- end copy -->
@@ -39,14 +39,8 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Check back later for more Featured collections!</div>
-		<div>Discover More
-</div>
-		<div>Featured Archives
-</div>
+		<div>Check back later for more collections!</div>
 		<div></div>
-		<div>Suggest a Featured
-</div>
 
 	</div>
 
